frontend/src/pages/profile/profileTop/profileTop.css
.profileTop {
    width: 100%;
    height: 380px;
}

.profileTop .coverPhoto_wrapper {
    position: relative;
    width: 100%;
    height: 300px;
}

.profileTop .coverPhoto {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.profileTop .coverPhoto_mask {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 0;
    cursor: pointer;
    transition-duration: .2s;
}

.profileTop .coverPhoto_mask:hover {
    opacity: 30%;
    transition-duration: .2s;
}

.profileTop .profilePic_wrapper {
    position: relative;
    top: -75px;
    display: table;
    height: 150px;
    width: 150px;
    margin: auto;
    border-radius: 50%;
    border: solid 5px white;
}

.profileTop .profilePic {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
}

.profileTop .profilePic_mask {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 30%;
    border-radius: 50%;
    opacity: 0;
    cursor: pointer;
    transition-duration: .2s;
}

.profileTop .profilePic_mask:hover {
    opacity: 30%;
    transition-duration: .2s;
}

.profileTop .popup_mask {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.273);
    transition-duration: .2s;
}

.profileTop .popup {
    position: absolute;
    top: 40%;
    left: 50%;
    width: 200px;
    background-color: rgb(255, 255, 255);
    padding: 1rem;
    border-radius: 5px;
    box-shadow: 0px 1px 5px gray;
    text-overflow: ellipsis;
    transform: translateX(-50%);
    transition-duration: .2s;
}

.profileTop .popup input::-webkit-file-upload-button {
    font-weight: 500;
    color: white;
    background-color: rgb(200, 170, 175);
    margin-right: .5rem;
    padding: .25rem .5rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.profileTop .popup input {
    text-overflow: ellipsis;
    margin: 1rem 0;
    width: 100%;
}

.profileTop .popup button {
    font-weight: 500;
    color: white;
    background-color: rgb(200, 170, 175);
    margin-right: .5rem;
    padding: .25rem .5rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

@media all and (min-width: 750px) {
    .profileTop .popup_mask {
        left: var(--sidemenu_max-width);
        max-width: calc(100% - var(--sidemenu_max-width));
    }
}

@media all and (min-width: 1025px) {
    .profileTop {
        position: relative;
    }

    .profileTop .profilePic_wrapper {
        position: absolute;
        top: 150px;
        left: 3rem;
        height: 300px;
        width: 300px;
    }
}

